Loader and Flicker issues fixed

--- a/project/css/banner.css
+++ b/project/css/banner.css
@@ -12,6 +12,10 @@ Gray:  #9A9798;
 	height: 650px;
 }
 
+.flickerplate {
+	width: auto !important;
+}
+
 #mainbanner .flick-content {
 	max-width: 100%;
 	margin-right: 1%;
@@ -31,6 +35,10 @@ Gray:  #9A9798;
 	font-weight: 100;
 	color: #fff;
 	opacity: 0.8;
+}
+
+#mainbanner ul.flicks {
+	width: 10100% !important;
 }
 
 #mainbanner ul.flicks>li .flick-inner {
