--- a/project/css/dss.css
+++ b/project/css/dss.css
@@ -221,6 +221,20 @@ footer a:after {
     margin-right: 0%;
 }
 
+/* Page Loader Animation */
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(../img/loader.gif) center no-repeat #fff;
+}
+/* ===================== */
+
 @media only screen and (min-width: 30em){ /* 480px */
     #mainbanner {
         margin-right: 0%;
